@@ -1,8 +1,4 @@
-DIST osutil-1.2.0-2.fc11.src.rpm 350640 RMD160 32ca3b69dd3e69db861c89d1f3617b2dc50c2920 SHA1 796e6cf9a424e03db85679c58356e2f293d13c6d SHA256 881eb69aeb0896ff22369d8862c5f30cc4cce527947663ce67acf75de2b77353
-DIST osutil-1.3.0.tar.gz 296413 RMD160 14dc66a236c8c5600a27e95c9b31871662170993 SHA1 34c577fac3fbec5d743796fdfb1e8b0d289d135f SHA256 e6d211d69a006b4c93687657efb8a5cd2f8bc7b42f8bc291b7228e792f842fb1
 DIST osutil-1.3.1.tar.gz 361332 RMD160 bc33be84fc6202b59f3c723e065eeaea10861526 SHA1 df62590146128dcd03b88d391236cb7ca30d8c88 SHA256 ae976541a21a25c88147a23417fcaaba3fc0692ab10066b46ed5b2de44e89f14
-EBUILD osutil-1.2.0.ebuild 884 RMD160 7196eebfdecd392c051c4a4cb4604b080dec56df SHA1 43033fd6dfb98ced5a59fc26b25f83d87be98612 SHA256 d011651d991bea3191f94d280b2610e97ad3371361adbd0d056a44afaa563460
-EBUILD osutil-1.3.0.ebuild 792 RMD160 10a367f08fe8a0ba5c559217c668f06a1c477b21 SHA1 f34b7835a07d1ede1d6bcdaa7ddea899674374ae SHA256 c727c9e85d4e9051735b532f0ebb4bc5b91fd9785ba3238807d76ac3536c1ba8
 EBUILD osutil-1.3.1.ebuild 792 RMD160 10a367f08fe8a0ba5c559217c668f06a1c477b21 SHA1 f34b7835a07d1ede1d6bcdaa7ddea899674374ae SHA256 c727c9e85d4e9051735b532f0ebb4bc5b91fd9785ba3238807d76ac3536c1ba8
-MISC ChangeLog 581 RMD160 0a27fa8539c0547449f89986fe47bb5f8caa988d SHA1 f469826d4291da4ea321f364d0e38a654eeebb98 SHA256 7ba5f640fca98367a6f3c8749aab49ec627a64e4ed0e80575e8214037d20f156
+MISC ChangeLog 694 RMD160 65ddee56c8fc9960d41fbbaaaa520988fecdc7f9 SHA1 e5b4e565b9969c73a8889ab9217556339a0ae233 SHA256 561992c170180f0fbf7ece9950b0894f2804368948faa54cf30efbb9f82f6f21
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
