@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru> -osutil-1.2.0.ebuild,
+  -osutil-1.3.0.ebuild:
+  remove old
+
   13 Feb 2010; <slep@gentoo.org> +osutil-1.2.0.ebuild, +osutil-1.3.0.ebuild,
   +osutil-1.3.1.ebuild, +metadata.xml:
   move to dev-java
